--- a/themes/default/messages/single.html
+++ b/themes/default/messages/single.html
@@ -13,7 +13,8 @@
 
                 <div class="messagessingle">
 
-                    <!-- START : SINGLE CONVERSATION -->
+					<!-- START : SINGLE CONVERSATION -->
+					<a href="{{ app.url }}/messages"><button class="btn btn-xs btn-secondary"><i class="la la-comments"></i> Conversations</button></a>
                     <button class="btn btn-xs btn-primary" onclick="location.reload();"><i class="la la-refresh"></i> Refresh</button>
 
 					<div class="card mt-2">
