--- a/themes/default/login/index.html
+++ b/themes/default/login/index.html
@@ -32,11 +32,11 @@
                         </div>
                     </div>
 
-                    <div class="tab-content p-3 pb-4">
+                    <div class="tab-content px-3 py-4">
 
                         <div class="tab-content">
 
-                            <div class="tab-pane fade show active pt-3" id="login" role="tabpanel" aria-labelledby="login-tab">
+                            <div class="tab-pane fade show active" id="login" role="tabpanel" aria-labelledby="login-tab">
                                 <form name="loginform" method="post">
 
                                     <!-- OUTPUT MESSAGES -->
@@ -70,7 +70,63 @@
                                                     <option value="" selected hidden>Login as</option>
                                                     <option value="student">Student</option>
                                                     <option value="parent">Parent</option>
-                                                    <option value="coach">Coach</option>
+                                                    <option value="staff">Staff</option>
+                                                </select>
+                                            </div>
+
+                                        </div>
+                                    </div>
+
+                                    <!-- LOGIN BUTTON -->
+                                    <div class="col-12 mt-5 p-0">
+                                        <div class="row">
+                                            <input type="hidden" name="is_login" value="true"/>
+                                            <div class="col-4 p-0 mx-auto">
+                                                <button class="btn btn-secondary btn-block" type="reset" name="reset">Clear</button>
+                                            </div>
+                                            <div class="col-6 p-0 mx-auto">
+                                                <button class="btn btn-primary btn-block" type="submit"><i class="la la-sign-in"></i> Login</button>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </form>
+                            </div>
+
+                            <div class="tab-pane fade show" id="register" role="tabpanel" aria-labelledby="register-tab">
+                                <form name="loginform" method="post">
+
+                                    <!-- OUTPUT MESSAGES -->
+                                    {% if msg %}
+                                        <div class="alert alert-danger">{{ msg }}</div>
+                                        <hr width="100%"/>
+                                    {% endif %}
+
+                                    <!-- USERNAME -->
+                                    <div class="form-group">
+                                        <label>Username</label>
+                                        <input class="form-control" type="text" id="username" name="username" placeholder="Username" required/>
+                                    </div>
+                            
+                                    <!-- PASSWORD -->
+                                    <div class="form-group mt-3">
+                                        <label>Password</label>
+                                        <input class="form-control" type="password" id="password" name="password" placeholder="Password" required/>
+                                    </div>
+
+                                    <!-- REMEMBER ME / LOGIN AS -->
+                                    <div class="form-group ml-4 mt-4 remember">
+                                        <div class="row">
+                                            <div class="col-6 pr-0">
+                                                <input type="checkbox" class="form-check-input" id="remember-me" name="remember-me">
+                                                <label>Remember me</label>
+                                            </div>
+
+                                            <div class="col-6 ml-auto login-as">
+                                                <select class="form-control form-control-sm selectpicker show-tick" id="login_as" name="login_as" required>
+                                                    <option value="" selected hidden>Login as</option>
+                                                    <option value="student">Student</option>
+                                                    <option value="parent">Parent</option>
                                                     <option value="staff">Staff</option>
                                                 </select>
                                             </div>
@@ -92,10 +148,6 @@
                                     </div>
 
                                 </form>
-                            </div>
-
-                            <div class="tab-pane fade show" id="register" role="tabpanel" aria-labelledby="register-tab">
-                                Hi
                             </div>
 
                         </div>
