--- a/themes/default/common/sidenav.html
+++ b/themes/default/common/sidenav.html
@@ -181,7 +181,7 @@
                         </li>
                         
                         <li class="sub-menu">
-                            <a href="{{ app.url }}/sport/add_coach"><i class="la la-plus-circle"></i><span>&nbsp;New Coach</span></a>
+                            <a href="{{ app.url }}/sport/add_coach"><i class="la la-plus-circle"></i><span>&nbsp;Add Coach</span></a>
                         </li>
                         
                     </ul>
