--- a/themes/default/student/profile.html
+++ b/themes/default/student/profile.html
@@ -41,7 +41,7 @@
                                         
                                         <ul class="nav nav-pills" id="myTab" role="tablist">
                                             <li class="nav-item">
-                                                <a class="nav-link active" id="about-tab" data-toggle="tab" href="#about" role="about" aria-controls="about" aria-selected="true">About</a>
+                                                <a class="nav-link active" id="about-tab" data-toggle="tab" href="#about" role="about" aria-controls="about" aria-selected="true">Info</a>
                                             </li>
                                             <li class="nav-item">
                                                 <a class="nav-link" id="parents-tab" data-toggle="tab" href="#parents" role="tab" aria-controls="parents" aria-selected="false">Parents</a>
@@ -417,6 +417,7 @@
                                                     
                                                 </div>
                                             </div>
+                                            <!-- END : TOOLS TAB -->
 
                                         </div>
 
