permission and example

--- a/themes/default/home/index.html
+++ b/themes/default/home/index.html
@@ -1,6 +1,12 @@
 {{ template.header|raw }}
 
 <body>
+<!-- 
+    {% if authUser.hasPermission('edit_users') %}
+
+    TEST
+
+    {% endif %} -->
 
     <div class="container-fluid home">
         <div class="row">
